[package]
name = "sunset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.137"
clap = { version = "3.0", features = ["derive"] }

[[bin]]
name = "shim"
path = "src/shim/main.rs"

[[bin]]
name = "sunset"
path = "src/sunset/main.rs"