[package]
name = "sunset"
version = "0.2.0"
edition = "2021"

[lib]
name = "sunset"
path = "src/sunset/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
serde = "1.0.137"
path-absolutize = "3.0.13"
clap = { version = "4.2.7", features = ["derive", "env"] }
winreg = "0.50.0"
pathsearch = "0.2.0"
open = "4.1.0"

[[bin]]
name = "shim"
path = "src/bin/shim/main.rs"

[[bin]]
name = "shimw"
path = "src/bin/shimw/main.rs"

[[bin]]
name = "sunset"
path = "src/bin/sunset/main.rs"
