[package]
name = "sunset"
version = "0.3.0"
edition = "2021"
default-run = "sunset"

[lib]
name = "sunset"
path = "src/sunset/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.14"
serde = "1.0.204"
path-absolutize = "3.1.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
winreg = "0.52.0"
pathsearch = "0.2.0"
open = "5.3.0"
regex = "1.10.5"
once_cell = "1.19.0"

[[bin]]
name = "shim"
path = "src/bin/shim/main.rs"

[[bin]]
name = "shimw"
path = "src/bin/shimw/main.rs"

[[bin]]
name = "sunset"
path = "src/bin/sunset/main.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
